syntax = "proto3";

option java_package = "com.project.datastore.proto";
option java_multiple_files = true;

message UserPreferences {
  int32 id = 4;
  string first_name = 1;
  string last_name = 2;
  int64 birth_day = 3;
}